--- a/public/assets/css/attilatwo.css
+++ b/public/assets/css/attilatwo.css
@@ -3,13 +3,13 @@ html, body {
     height: 100%;
   }
 
-  .background {
+  /* .background {
       background-image: url("/assets/img/attilla.jpeg");
       height: 100%;
       background-position: center;
       background-repeat: none;
       background-size: cover;
-  }
+  } */
 
 .test {
   color: red;
@@ -22,7 +22,7 @@ html, body {
   padding: 0;
 }
 
-#btn-one {
+#btn-attila {
   width: 300px;
   height: 250px;
   position: absolute;
@@ -39,7 +39,7 @@ html, body {
   left: 5%;
 }
 
-#btn-attila {
+#btn-statue {
     width: 280px;
     height: 700px;
     position: absolute;
