--- a/public/assets/css/laborone.css
+++ b/public/assets/css/laborone.css
@@ -3,13 +3,23 @@ html, body {
     height: 100%;
   }
 
+  .background {
+    background-image: url("https://images.pexels.com/photos/356040/pexels-photo-356040.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    height: 100%;
+    background-position: center;
+    background-repeat: none;
+    background-size: cover;
+}
+  
 .test {
   color: red;
 }
 
 .container-fluid {
   position: relative;
-  height: 80vh;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 #btn-one {
@@ -26,4 +36,12 @@ html, body {
   position: absolute;
   top: 10%;
   right: 40%;
+}
+
+#btn-three {
+  width: 200px;
+  height: 232px;
+  position: absolute;
+  top: 20%;
+  left: 40%;
 }
