--- a/public/assets/css/gatesone.css
+++ b/public/assets/css/gatesone.css
@@ -3,13 +3,13 @@ html, body {
     height: 100%;
   }
 
-  .background {
+  /* .background {
       background-image: url("/assets/img/GATES_SCHWERER.jpg");
       height: 100%;
       background-position: center;
       background-repeat: none;
       background-size: cover;
-  }
+  } */
 
 .test {
   color: red;
